<resources>
    <string name="app_name">complexCalc</string>
    <string name="ac">AC</string>
    <string name="backspace">⌫</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="modulus">%</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Multi">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="negate">+/-</string>
</resources>